style fix page bug style new font

--- a/Task Manager/Task Manager.csproj
+++ b/Task Manager/Task Manager.csproj
@@ -16,7 +16,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Shared\css\" />
     <Folder Include="wwwroot\lib\js\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\lib\css\style.css" />
   </ItemGroup>
 
 </Project>
